; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/mm/extr_mmu_context_nohash.c_steal_context_up.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/mm/extr_mmu_context_nohash.c_steal_context_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mm_struct = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@context_mm = common dso_local global %struct.mm_struct** null, align 8
@.str = private unnamed_addr constant [22 x i8] c" | steal %d from 0x%p\00", align 1
@MMU_NO_CONTEXT = common dso_local global i32 0, align 4
@stale_map = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @steal_context_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @steal_context_up(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mm_struct*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call i32 (...) @smp_processor_id()
  store i32 %5, i32* %4, align 4
  %6 = load %struct.mm_struct**, %struct.mm_struct*** @context_mm, align 8
  %7 = load i32, i32* %2, align 4
  %8 = zext i32 %7 to i64
  %9 = getelementptr inbounds %struct.mm_struct*, %struct.mm_struct** %6, i64 %8
  %10 = load %struct.mm_struct*, %struct.mm_struct** %9, align 8
  store %struct.mm_struct* %10, %struct.mm_struct** %3, align 8
  %11 = load i32, i32* %2, align 4
  %12 = load %struct.mm_struct*, %struct.mm_struct** %3, align 8
  %13 = call i32 @pr_hardcont(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %11, %struct.mm_struct* %12)
  %14 = load %struct.mm_struct*, %struct.mm_struct** %3, align 8
  %15 = call i32 @local_flush_tlb_mm(%struct.mm_struct* %14)
  %16 = load i32, i32* @MMU_NO_CONTEXT, align 4
  %17 = load %struct.mm_struct*, %struct.mm_struct** %3, align 8
  %18 = getelementptr inbounds %struct.mm_struct, %struct.mm_struct* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  store i32 %16, i32* %19, align 4
  %20 = load i32, i32* %2, align 4
  %21 = load i32*, i32** @stale_map, align 8
  %22 = load i32, i32* %4, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @__clear_bit(i32 %20, i32 %25)
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @smp_processor_id(...) #1

declare dso_local i32 @pr_hardcont(i8*, i32, %struct.mm_struct*) #1

declare dso_local i32 @local_flush_tlb_mm(%struct.mm_struct*) #1

declare dso_local i32 @__clear_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
